<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/kalkulator"
        android:textColor="@color/purple_700"
        android:textSize="20dp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bilangan_pertama"
        android:textSize="10pt"
        android:textStyle="bold"
        android:background="@color/purple_200"/>
    <EditText
        android:id="@+id/editbilanganpertama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bilangan_kedua"
        android:textSize="10pt"
        android:textStyle="bold"
        android:background="@color/purple_200"/>
    <EditText
        android:id="@+id/editbilangankedua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_tambah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="5dp"
            android:text="@string/tambah" />

        <Button
            android:id="@+id/button_kurang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/kurang" />

        <Button
            android:id="@+id/button_kali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/kali"/>

        <Button
            android:id="@+id/button_bagi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/bagi"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textHasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hasil"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="10pt">

    </TextView>

</LinearLayout>